# hydra

./: .gitignore  ChangeLog.md  LICENSE  fourmolu.yaml  hydra.cabal  package.yaml  squid.cabal  stack.yaml
abis/uniswap/: UniswapV2Router02.json
app/: Help.hs  Main.hs  Parser.hs  Types.hs
app/Command/: Eval.hs  Run.hs  Sync.hs  Tune.hs
data/graphql/: pancakeswap_exchange.gql
data/mongodb/: price_volume_schema.js
dhall/: Time
dhall/Duration/: Type  days  hours  minutes  months  seconds
dhall/Map/: build  build1  entry
dhall/Market/: Asset  Share  asset  share
dhall/Market/Blockchain/: Gwei  gwei
dhall/Market/Evaluation/: Metric  MetricCalculator  avgLogReturn  avgReturn  daily  hourly  minutely  monthly  secondly  sharpeRatio  stdReturn
dhall/Market/Instrument/: Builder  Config  Name  Type  assetToName  name
dhall/Time/: Type  days  hours  minutes  months  seconds
python/ibkr/: pyproject.toml
python/ibkr/ibkr/: client.py  from_squid.py  log.py  rpc.py  run.py  to_ibapi.py  types.py
src/: Lib.hs  Market.hs
src/Data/: Approx.hs  Deriving.hs
src/Market/: Asset.hs  Blockchain.hs  Broker.hs  Deriving.hs  Dhall.hs  Error.hs  Evaluation.hs  Feed.hs  Instrument.hs  Instruments.hs  Log.hs  Notebook.hs  Ops.hs  Plot.hs  Simulation.hs  Strategy.hs  Time.hs  Tuning.hs  Types.hs
src/Numeric/: Absolute.hs  Delta.hs  Deriving.hs  Kappa.hs  Normalizable.hs  Normed.hs  Precision.hs  Relative.hs  Truncatable.hs
src/Polysemy/: Logging.hs
src/Type/: List.hs
test/: Spec.hs
test/Market/: Test.hs
test/Numeric/: Test.hs
tokens/: polygon.json
(+96 files in other folders)
